; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_set_user_object_type.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_set_user_object_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_hints_set_user_object_type = type { i32, i64 }

@LEV_HINTS_SET_USER_OBJECT_TYPE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_set_user_object_type(i32 %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.lev_hints_set_user_object_type*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @check_type(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %4
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @check_type(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load i64, i64* %8, align 8
  %20 = call i32 @check_object_id(i64 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %18, %14, %4
  store i32 0, i32* %5, align 4
  br label %41

23:                                               ; preds = %18
  %24 = load i64, i64* @LEV_HINTS_SET_USER_OBJECT_TYPE, align 8
  %25 = load i32, i32* %7, align 4
  %26 = mul nsw i32 256, %25
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %24, %27
  %29 = load i32, i32* %9, align 4
  %30 = sext i32 %29 to i64
  %31 = add nsw i64 %28, %30
  %32 = call %struct.lev_hints_set_user_object_type* @alloc_log_event(i64 %31, i32 16, i32 0)
  store %struct.lev_hints_set_user_object_type* %32, %struct.lev_hints_set_user_object_type** %10, align 8
  %33 = load i32, i32* %6, align 4
  %34 = load %struct.lev_hints_set_user_object_type*, %struct.lev_hints_set_user_object_type** %10, align 8
  %35 = getelementptr inbounds %struct.lev_hints_set_user_object_type, %struct.lev_hints_set_user_object_type* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 8
  %36 = load i64, i64* %8, align 8
  %37 = load %struct.lev_hints_set_user_object_type*, %struct.lev_hints_set_user_object_type** %10, align 8
  %38 = getelementptr inbounds %struct.lev_hints_set_user_object_type, %struct.lev_hints_set_user_object_type* %37, i32 0, i32 1
  store i64 %36, i64* %38, align 8
  %39 = load %struct.lev_hints_set_user_object_type*, %struct.lev_hints_set_user_object_type** %10, align 8
  %40 = call i32 @set_user_object_type(%struct.lev_hints_set_user_object_type* %39)
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %23, %22
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i32 @check_type(i32) #1

declare dso_local i32 @check_object_id(i64) #1

declare dso_local %struct.lev_hints_set_user_object_type* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @set_user_object_type(%struct.lev_hints_set_user_object_type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
